Resolve z-index issues with scrolling header

--- a/src/resources/css/default.css
+++ b/src/resources/css/default.css
@@ -954,7 +954,7 @@ main {
 	position: absolute;
 	right: 0;
 	top: -1px;
-	z-index: 4;
+	z-index: 0;
 }
 .scrollable[scrolling="1"] {
 	margin: auto;
@@ -966,6 +966,10 @@ main {
 	position: absolute;
 	right: auto !important;
 	top: auto;
+}
+.scrollable[scrolling="1"],
+.scrollable[scrolled_to_the_bottom="1"] {
+	z-index: 4;
 }
 .item-configuration-container .checked-container {
 	display: block;
